--- a/angular_task/index.html
+++ b/angular_task/index.html
@@ -23,7 +23,7 @@
 	<div class="row">
     	<div class="container">
     		<div class="col-sm-9">
-    			<div ng-include src="'partials/task.html'"></div>
+    			<div ng-include src="'partials/task-extend.html'"></div>
     		</div>
     	
     	</div>
